[tool.poetry]
name = "traffic-surv"
version = "0.1.0"
description = ""
authors = ["melaniefayne <melaniefayne33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.3.40"
opencv-python = "^4.8.0.76"
supervision = "0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
